# speednik

./: .gitignore  .lisa.toml  CLAUDE.md  justfile  pyproject.toml  web_entry.py
.github/workflows/: test.yml
docs/: specification.md
docs/knowledge/: horizontal-pachinko.md
docs/plans/: 2026-02-25-music-collision-loop-design.md  (+1 more)
scenarios/: gap_jump.yaml  hillside_complete.yaml  hillside_hold_right.yaml  hillside_loop.yaml  pipeworks_jump.yaml
speednik/: audio.py  camera.py  constants.py  debug.py  devpark.py  enemies.py  env.py  env_registration.py  grids.py  invariants.py  level.py  main.py  objects.py  observation.py  physics.py  player.py  qa.py  renderer.py  simulation.py  strategies.py  terrain.py
tests/: grids.py  harness.py  test_agents.py  test_audio.py  test_audit_hillside.py  test_audit_invariants.py  test_audit_pipeworks.py  test_audit_skybridge.py  test_camera.py  test_camera_stability.py  test_debug.py  test_devpark.py  test_elementals.py  test_enemies.py  test_entity_interactions.py  test_env.py  test_game_objects.py  test_game_state.py  test_geometry_probes.py  test_grids.py  test_harness.py  test_hillside.py  test_hillside_integration.py  test_integration.py  test_invariants.py  test_levels.py  test_loop_audit.py  test_mechanic_probes.py  test_observation.py  test_physics.py  test_pipeworks.py  test_player.py  test_profile2stage.py  test_qa_framework.py  test_regression.py  test_renderer.py  test_rings.py  test_scenarios.py  test_simulation.py  test_skybridge.py  (+5 more)
tools/: analyze_mp3s.py  ppo_speednik.py  profile2stage.py  svg2stage.py
(+680 files in other folders)
