[project]
name = "speednik"
version = "0.1.0"
description = "A Sonic 2 homage built with Pyxel"
requires-python = ">=3.10"
dependencies = ["pyxel"]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "librosa>=0.11.0",
]
